--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: crimson;
+    color:#003ACC;
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
@@ -83,7 +83,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: crimson;
+    background:#003ACC;
 }
 .navbar .max-width{
     display: flex;
@@ -96,7 +96,7 @@ section .title::after{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: crimson;
+    color:#003ACC;
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -115,7 +115,7 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: crimson;
+    color: #003ACC;
 }
 .navbar.sticky .menu li a:hover{
     color: #fff;
@@ -131,7 +131,7 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: crimson;
+    background:#003ACC;
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -185,24 +185,24 @@ section .title::after{
     margin: 5px 0;
 }
 .home .home-content .text-3 span{
-    color: crimson;
+    color: #003ACC;
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background: crimson;
+    background: #003ACC;
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid#003ACC;
     transition: all 0.3s ease;
 }
 
 .home .home-content a:hover{
-    color: crimson;
+    color:#003ACC;
     background: none;
 }
 /* about section styling */
@@ -228,25 +228,25 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: crimson;
+    color:#003ACC;
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about .about-content .right a{
     display: inline-block;
-    background: crimson;
+    background: #003ACC;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid#003ACC;
     transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color: crimson;
+    color: #003ACC;
     background: none;
 }
 /* services section styling */
@@ -273,7 +273,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .services .serv-content .card:hover{
-    background: crimson;
+    background:#003ACC;
 }
 .services .serv-content .card .box{
     transition: all 0.3s ease;
@@ -283,7 +283,7 @@ section .title::after{
 }
 .services .serv-content .card i{
     font-size: 50px;
-    color: crimson;
+    color:#003ACC;
     transition: color 0.3s ease;
 }
 .services .serv-content .card:hover i{
@@ -311,18 +311,18 @@ section .title::after{
 }
 .skills .skills-content .left a{
     display: inline-block;
-    background: crimson;
+    background:#003ACC;
     color: #fff;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid#003ACC;
     transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover{
-    color: crimson;
+    color:#003ACC;
     background: none;
 }
 .skills .skills-content .right .bars{
@@ -350,7 +350,7 @@ section .title::after{
     height: 100%;
     left: 0;
     top: 0;
-    background: crimson;
+    background: #003ACC;
 }
 .skills-content .right .html::before{
     width: 90%;
@@ -404,7 +404,7 @@ h2#text-0.title{
 }
 .contact .contact-content .row i{
     font-size: 25px;
-    color: crimson;
+    color:#003ACC;
 }
 .contact .contact-content .info .head{
     font-weight: 500;
@@ -466,12 +466,12 @@ h2#text-0.title{
   border-radius: 6px;
   cursor: pointer;
   flex-wrap: nowrap;
-  background: crimson;
-  border: 2px solid crimson;
+  background: #003ACC;
+  border: 2px solid#003ACC;
   transition: all 0.3s ease;
 }
 .right form .button-area button:hover{
-  color: crimson;
+  color: #003ACC;
   background: none;
 }
 /* footer section styling */
@@ -482,7 +482,7 @@ footer{
     text-align: center;
 }
 footer span a{
-    color: crimson;
+    color:#003ACC;
     text-decoration: none;
 }
 footer span a:hover{
